Update demo pages with placeholder images and make servers accessible externally

--- a/demos/index.html
+++ b/demos/index.html
@@ -173,7 +173,7 @@
         <div class="demos">
           <div class="demo-card">
             <img
-              src="voxel-engine/screenshots/voxel-demo-initial-view.png"
+              src="https://placehold.co/400x200/4a6baf/white?text=Voxel+Engine+Demo"
               alt="Voxel Engine Demo"
               class="demo-image"
             />
