--- a/demos/voxel-engine/index.html
+++ b/demos/voxel-engine/index.html
@@ -288,7 +288,7 @@
         <div class="screenshots">
           <div class="screenshot">
             <img
-              src="screenshots/voxel-demo-start-screen.png"
+              src="https://placehold.co/400x300/4a6baf/white?text=Start+Screen"
               alt="Start Screen"
             />
             <div class="screenshot-caption">
@@ -299,7 +299,7 @@
 
           <div class="screenshot">
             <img
-              src="screenshots/voxel-demo-initial-view.png"
+              src="https://placehold.co/400x300/4a6baf/white?text=Initial+View"
               alt="Initial View"
             />
             <div class="screenshot-caption">
@@ -310,7 +310,7 @@
 
           <div class="screenshot">
             <img
-              src="screenshots/voxel-demo-moving-forward.png"
+              src="https://placehold.co/400x300/4a6baf/white?text=Moving+Forward"
               alt="Moving Forward"
             />
             <div class="screenshot-caption">
@@ -320,7 +320,10 @@
           </div>
 
           <div class="screenshot">
-            <img src="screenshots/voxel-demo-jumping.png" alt="Jumping" />
+            <img
+              src="https://placehold.co/400x300/4a6baf/white?text=Jumping"
+              alt="Jumping"
+            />
             <div class="screenshot-caption">
               <h3>Jumping</h3>
               <p>Player jumping with physics.</p>
@@ -329,7 +332,7 @@
 
           <div class="screenshot">
             <img
-              src="screenshots/voxel-demo-select-grass.png"
+              src="https://placehold.co/400x300/4a6baf/white?text=Block+Selection"
               alt="Selecting Grass Blocks"
             />
             <div class="screenshot-caption">
@@ -339,7 +342,10 @@
           </div>
 
           <div class="screenshot">
-            <img src="screenshots/voxel-demo-place-mode.png" alt="Place Mode" />
+            <img
+              src="https://placehold.co/400x300/4a6baf/white?text=Place+Mode"
+              alt="Place Mode"
+            />
             <div class="screenshot-caption">
               <h3>Place Mode</h3>
               <p>Toggling between break and place modes.</p>
@@ -348,14 +354,41 @@
         </div>
       </section>
 
-      <section>
-        <h2>Demo Video</h2>
+      <section id="video">
+        <h2>Video Demonstration</h2>
         <div class="video-container">
-          <video controls>
-            <source src="videos/voxel-demo.webm" type="video/webm" />
-            Your browser does not support the video tag.
-          </video>
+          <!-- Replace with actual video when available -->
+          <div class="placeholder-video">
+            <div
+              style="
+                width: 100%;
+                height: 0;
+                padding-bottom: 56.25%;
+                position: relative;
+                background: #4a6baf;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+              "
+            >
+              <div
+                style="
+                  position: absolute;
+                  color: white;
+                  font-size: 24px;
+                  text-align: center;
+                "
+              >
+                Voxel Engine Demo Video<br />
+                <span style="font-size: 16px">(Coming Soon)</span>
+              </div>
+            </div>
+          </div>
         </div>
+        <p class="video-caption">
+          This video demonstrates the key features of our voxel engine demo,
+          including terrain generation, player movement, and block manipulation.
+        </p>
       </section>
 
       <section class="controls">
