Update demo pages and server scripts for improved voxel demo experience

--- a/demos/index.html
+++ b/demos/index.html
@@ -183,7 +183,9 @@
                 A Minecraft-inspired 3D voxel engine with procedural terrain
                 generation, block placement and destruction, and physics.
               </p>
-              <a href="voxel-engine/" class="demo-link">View Demo</a>
+              <a href="http://localhost:5173/voxel-demo" class="demo-link"
+                >View Demo</a
+              >
             </div>
           </div>
 
