--- a/demos/voxel-engine/index.html
+++ b/demos/voxel-engine/index.html
@@ -231,7 +231,7 @@
         <p class="subtitle">
           A Minecraft-inspired 3D voxel engine built with the HDMY5 Game Builder
         </p>
-        <a href="/voxel-demo" class="btn">Try the Demo</a>
+        <a href="http://localhost:5173/voxel-demo" class="btn">Try the Demo</a>
       </div>
     </header>
 
@@ -439,7 +439,7 @@
         <p>&copy; 2023 HDMY5 Game Builder</p>
         <div class="footer-links">
           <a href="/">Home</a>
-          <a href="/voxel-demo">Try Demo</a>
+          <a href="http://localhost:5173/voxel-demo">Try Demo</a>
           <a href="https://github.com/toddllm/HDMY5">GitHub</a>
         </div>
       </div>
